# FieldNotes

./: FieldNotes.lnk  FieldNotes_0.1.0_x64-setup.exe.lnk  README.md  Web based brower test FieldNotes.bat  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
electron/: main.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src/components/screenplay/: BreakdownPanel.tsx  CollabView.tsx  DocumentsTab.tsx  EditorToolbar.tsx  EditorWorkspace.tsx  HomeScreen.tsx  LabellingMode.tsx  LineTypeSidebar.tsx  ResearchBoard.tsx  ResizablePanel.tsx  SceneNavSidebar.tsx  ScriptEditor.tsx  ScriptPreviewDialog.tsx  SearchBar.tsx  SettingsPanel.tsx  ShotlistView.tsx  TagManager.tsx  TitlePageDialog.tsx
src/hooks/: useProject.ts  useTheme.ts  useTypewriterSound.ts  useUsageTime.ts
src/lib/: screenplayExport.ts  screenplayImport.ts
src/pages/: Index.tsx
src/types/: screenplay.ts
